--- a/Property List.plist
+++ b/Property List.plist
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   Property List.plist
-   ControlHub
-
-   Created by Maulik Mann on 2025-05-04.
-   Copyright (c) 2025 ___ORGANIZATIONNAME___. All rights reserved.
--->
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>NSAccessibilityUsageDescription</key>
+	<string>This app uses Accessibility to detect keyboard shortcuts.</string>
+</dict>
 </plist>
